# dumbserve

./: .dockerignore  .env_sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: clippy-fmt.yml  coverage.yml  linux.yml
config/: default.toml
dumbserve/: all.html  constant.API_V1_ROUTES.html  constant.CACHE_AGE.html  constant.COMPILED_DATE.html  constant.GIT_COMMIT_HASH.html  constant.PKG_DESCRIPTION.html  constant.PKG_HOMEPAGE.html  constant.PKG_NAME.html  constant.VERSION.html  fn.__stability.html  fn.__static_ref_initialize.html  fn.get_json_err.html  fn.main.html  index.html  sidebar-items.js  static.LAZY.html  struct.Ctx.html  struct.SETTINGS.html  struct.Settings.html  type.AppCtx.html
dumbserve/api/: index.html
dumbserve/api/v1/: constant.API_V1_ROUTES.html  fn.httpauth.html  fn.services.html  index.html  sidebar-items.js  struct.SignedInUser.html
dumbserve/ctx/: index.html  sidebar-items.js  struct.Ctx.html  type.ArcCtx.html
dumbserve/errors/: constant.FIELDS.html  enum.ServiceError.html  enum.__Field.html  index.html  sidebar-items.js  struct.ErrorToResponse.html  struct.__FieldVisitor.html  struct.__Visitor.html  type.ServiceResult.html
dumbserve/routes/: fn.services.html  index.html
dumbserve/settings/: constant.CURRENT_DIR.html  constant.ETC.html  constant.FIELDS.html  enum.__Field.html  fn.check_url.html  index.html  sidebar-items.js  struct.Creds.html  struct.Files.html  struct.Server.html  struct.Settings.html  struct.__FieldVisitor.html  struct.__Visitor.html
implementors/actix_web/service/: trait.HttpServiceFactory.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/lazy_static/: trait.LazyStatic.js
implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
scripts/: publish.sh
src/: ctx.rs  errors.rs  main.rs  routes.rs  settings.rs
src/api/v1/: files.rs  meta.rs  mod.rs
src/dumbserve/: ctx.rs.html  errors.rs.html  main.rs.html  routes.rs.html  settings.rs.html
src/dumbserve/api/: mod.rs.html
(+49 files in other folders)
